@@ -1,3 +1,4 @@
 Для запуска программы нужно использовать - Matrixx-1.0-SNAPSHOT-all.jar . 
 Он находится - java-matrix-2024/build/libs
 Для запуска в CMD - Необходимо указать путь до .jar файла, после чего командой java - jar Matrixx-1.0-SNAPSHOT-all.jar запустить программу.
+Для запуска на другой ОС  - java --module-path /Путь до директории/javafx-sdk-21.0.5/lib  --add-modules javafx.controls,javafx.fxml -jar Matrixx-1.0-SNAPSHOT-all.jar --debug 
